# go-chess-engine

./: README.md  go.mod  go.sum  main.go
cppversion/: CMakeLists.txt
cppversion/include/: board.hpp  consts.hpp  context.hpp  game.hpp  move.hpp  utils.hpp
cppversion/src/: board.cpp  game.cpp  main.cpp  utils.cpp
pkg/chess/: board.go  board_moves_hash_table.go  consts.go  context.go  direction_functions.go  fen.go  make_move.go  move.go  moves_function.go  notation.go  partial_board.go  piece.go  pieces_position.go  threefold_repetition.go  utils.go  vars.go  visual_board.go
pkg/engine/: analysis_report.go  board.go  consts.go  context.go  direction_functions.go  engine.go  evaluation.go  minimax.go  move.go  move_sort.go  moves_function.go  partial_board.go  perft.go  piece.go  piece_value_table.go  pieces_position.go  utils.go  visual_board.go
pkg/utils/: utils.go
tests/: castling_test.go  checkmate_test.go  consts.go  hash_test.go  make_move_test.go  notation_test.go  pawn_moves_test.go  perft_test.go  utils_test.go  vars.go
